fix(runtime): 完整对齐 pi 上下文压缩语义